<resources>
    <string name="app_name">Hunterz</string>

    <!--SPLASH ACTIVITY-->
    <string name="from">from</string>
    <string name="club_name">HUNTERZ</string>

    <!--SIGN IN ACTIVITY-->
    <string name="signIn_btn_title">SIGN IN</string>
    <string name="signUp_btn_title">SIGN UP</string>

    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="username_hint">Enter your Email</string>
    <string name="password_hint">Enter your Password</string>
    <string name="or_title">OR</string>
    <!--Error Message-->
    <string name="userName_errorMessage">Username Field is Empty</string>
    <string name="passWord_errorMessage">Password Field is Empty</string>

    <!--SIGN UP ACTIVITY-->
    <string name="signUp_title">BECOME A MEMBER</string>
    <string name="fullName_title">Full Name</string>
    <string name="fullName_hint">Enter your Name</string>
    <string name="phoneNo_title">Phone Number</string>
    <string name="phoneNo_hint">Enter your Phone Number</string>
    <string name="email_tile">Email</string>
    <string name="email_hint">Enter your Email</string>
    <string name="nic_tile">NIC Number</string>
    <string name="nic_hint">Enter your NIC Number</string>
    <string name="password_tile">Password</string>
    <string name="conPassword_tile">Confirm Password</string>
    <string name="conPassword_hint">Confirm Password</string>
    <string name="register_btn">REGISTER</string>
    <string name="questionSignIn">Have an Account?</string>
    <string name="signIn_btn">SIGN IN</string>
    <!--Error Message-->
    <string name="fullName_errorMessage">Full Name Field is Empty</string>
    <string name="fullName_errorMessage_Alphabet">Enter Alphabet Value Only</string>
    <string name="phoneNo_errorMessage">Phone Number Field is Empty</string>
    <string name="phoneNo_errorMessage_10_Digit">Enter Valid 10 Digit Phone Number</string>
    <string name="phoneNo_errorMessage_Start_0">Phone Number Should Start With \'0\' </string>
    <string name="nic_errorMessage">NIC Number Field is Empty</string>
    <string name="nic_errorMessage_valid">Invalid NIC Number</string>
    <string name="nic_errorMessage_exist">NIC Number Already Exist</string>
    <string name="email_errorMessage">Email Id Field is Empty</string>
    <string name="email_errorMessage_Valid">Enter Valid Email Id</string>
    <string name="email_errorMessage_Exist">Email is Already Exist</string>
    <string name="password_errorMessage">Password Field is Empty</string>
    <string name="password_errorMessage_Pattern">Password Should Have 8 Characters with at least a Digit, a Special Character, a Upper Case Character</string>
    <string name="confirm_password_errorMessage">Confirm Password Field is Empty</string>
    <string name="confirm_password_errorMessage_Match">Confirm Password did not Match</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hunterz Sport Club</string>
    <string name="nav_header_subtitle">hunterzsports@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--ADMIN MENU-->
    <string name="menu_sub_title">Communicate</string>
    <string name="menu_home">Home</string>
    <string name="menu_manage_memebr">Manage Member</string>
    <string name="menu_member_status">Member Status</string>
    <string name="menu_pay_fee">Pay Fee</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_manage_team">Manage Team</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_send_post">Send Post</string>
    <string name="menu_send_notification">Send Notification</string>

    <!--MANAGE MEMBER-->
    <string name="add_member">Add Member</string>
    <string name="view_member">View All</string>
    <string name="search_member">Search</string>
    <!--Add Member-->
    <string name="member_id_title">Membet ID</string>

    <string name="fullName_admin_hint">Enter Member Name</string>
    <string name="phoneNo_admin_hint">Enter Member Phone Number</string>
    <string name="email_admin_hint">Enter Member Email</string>
    <string name="nic_admin_hint">Enter Member NIC Number</string>
    <string name="Password_admin_hint">Enter Password</string>
    <string name="conPassword_admin_hint">Confirm Password</string>
    <string name="register_admin_btn">ADD MEMBER</string>
    <string name="gender_title">Gender</string>
    <string name="male_rad">Male</string>
    <string name="female_rad">Female</string>
    <string name="address_title">Address</string>
    <string name="address_admin_hint">Enter Member Address</string>
    <string name="dob_title">Date Of Birth</string>
    <string name="date_picker_btn">Date Picker</string>
    <string name="sport_type_title">Sport Types</string>
    <string name="cricket_chk">Cricket</string>
    <string name="football_chk">Football</string>
    <string name="volleyball_chk">Volleyball</string>
    <string name="add_image_btn">ADD IMAGE</string>
    <!--Error Message-->
    <string name="select_gender_errorMessage">Select Member Gender</string>
    <string name="address_errorMessage">Address Field is Empty</string>
    <string name="dob_errorMessage1">Pick Member Date Of Birth</string>
    <string name="dob_errorMessage2">Member is Too Young!</string>
    <string name="sportType_errorMessage">Select Sport Type</string>
    <string name="image_errorMessage">Upload Member Image</string>

    <!--Search & Update Member-->
    <string-array name="types_array">    <!--Drop Down List-->
        <item>Register Number</item>
        <item>NIC Number</item>
    </string-array>

    <string name="search_btn">SEARCH</string>
    <string name="register_search_hint">Enter Member Register Number</string>
    <string name="nic_search_hint">Enter Member NIC Number</string>
    <string name="clear_btn">Clear</string>
    <string name="update_btn">UPDATE  MEMBER</string>
    <string name="change_btn">CHANGE IMAGE</string>
    <string name="new_password_chk">New Password</string>
    <string name="member_idS_title">MEMBER ID</string>

    <string name="member_image_errorMessage1">Something Went Wrong</string>
    <string name="member_image_errorMessage2">You haven\'t Picked Image</string>

    <!--Member Status-->
    <string name="new_member">New Member</string>
    <string name="member_status">Member Status</string>
    <!--New Member-->
    <string name="accept_btn">ACCEPT</string>
    <string name="refuse_btn">REFUSE</string>
    <!--Status Member-->
    <string name="activate_btn">ACTIVATE</string>
    <string name="deactivate_btn">DEACTIVATE</string>

    <!--PAY FEE-->
    <string name="fee_month_title">Select The Month</string>
    <!--Search & Update Member-->
    <string-array name="month_array">    <!--Drop Down List-->
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="pay_amount_title">Pay Amount</string>
    <string name="pay_amount_hint">Enter Pay Amount</string>
    <string name="pay_btn">PAY</string>
    <string name="month_errorMessage">Select A Payment Month</string>
    <string name="amount_errorMessage1">Enter Month Payment</string>
    <string name="amount_errorMessage2">Amount Can\'t be \'0\' or below</string>
    <string name="amount_errorMessage3">Pay Amount Need to be \'Rs.1500\'</string>


    <!--POST-->
    <string name="send_post">Send Post</string>
    <string name="delete_post">View &amp; Delete Post</string>
    <!--Send Post-->
    <string name="post_subject_title">Post Subject</string>
    <string name="post_subject_hint">Enter Post Subject</string>
    <string name="post_description_title">Post Description</string>
    <string name="post_description_hint">Enter Post Description</string>
    <string name="post_add_btn">SEND POST</string>
    <string name="post_subject_errorMessage1">Enter Post Subject</string>
    <string name="post_subject_errorMessage2">Characters Need to be \'100\' or Below</string>
    <string name="post_description_errorMessage1">Enter Post Description</string>
    <string name="post_description_errorMessage2">Characters Need to be \'300\' or Below</string>
    <string name="post_image_errorMessage">Upload Post Image</string>
    <!--Modify Post-->
    <string name="post_date">Posted Date:</string>
    <string name="post_update_btn">Update Post</string>
    <string name="post_delete_btn">Delete Post</string>

    <!--MANAGE TEAM-->
    <string name="add_new_team">Add New Team</string>
    <string name="view_team">View Teams</string>
    <!--Add New Team-->
    <string name="cricket_title">CRICKET</string>
    <string name="football_title">FOOTBALL</string>
    <string name="volleyball_title">VOLLEY BALL</string>
    <!--Cricket-->
    <string name="addTeamBtn">ADD TEAM</string>
    <string name="teamName_errorMessage1">Enter Team Name</string>
    <string name="memberId_errorMessage1">Enter Member Id</string>
    <string name="memberId_errorMessage2">Invalid Member Id</string>
    <string name="memberId_errorMessage3">Member Don\'t Play Cricket</string>
    <string name="memberId_errorMessage4">Member Id Already Added</string>
    <!--Football-->
    <string name="memberId_errorMessage5">Member Don\'t Play Football</string>
    <!--Volleyball-->
    <string name="memberId_errorMessage6">Member Don\'t Play Volleyball</string>


    <!--MEMBER ACCOUNT-->

    <!--HOME-->
    <string name="member_home">Home</string>
    <string name="member_profile">My Profile</string>
    <string name="member_team">Teams</string>
    <string name="member_account">Account</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
