<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_32dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_manage_member"
            android:icon="@drawable/ic_manage_member_32dp"
            android:title="@string/menu_manage_memebr" />
        <item
            android:id="@+id/nav_member_status"
            android:icon="@drawable/ic_member_status_32p"
            android:title="@string/menu_member_status" />
        <item
            android:id="@+id/nav_pay_fee"
            android:icon="@drawable/ic_pay_fee_32dp"
            android:title="@string/menu_pay_fee" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment_32dp"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_manage_team"
            android:icon="@drawable/ic_manage_team_24dp"
            android:title="@string/menu_manage_team" />
    </group>

    <item android:title="@string/menu_sub_title">
        <menu>
            <item
                android:id="@+id/nav_send_post"
                android:icon="@drawable/ic_send_post_32dp"
                android:title="@string/menu_send_post" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_admin_32dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
