<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hunterz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_manage_member"
        android:name="com.example.hunterz.ui.manage_member.ManageMemberFragment"
        android:label="@string/menu_manage_memebr"
        tools:layout="@layout/fragment_manage_member" />

    <fragment
        android:id="@+id/nav_member_status"
        android:name="com.example.hunterz.ui.member_status.MemberStatusFragment"
        android:label="@string/menu_member_status"
        tools:layout="@layout/fragment_member_status" />

    <fragment
        android:id="@+id/nav_pay_fee"
        android:name="com.example.hunterz.ui.pay_fee.PayFeeFragment"
        android:label="@string/menu_pay_fee"
        tools:layout="@layout/fragment_pay_fee" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.hunterz.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/nav_manage_team"
        android:name="com.example.hunterz.ui.manage_team.ManageTeamFragment"
        android:label="@string/menu_manage_team"
        tools:layout="@layout/fragment_manage_team" />
    <!--Communicate-->
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.hunterz.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_send_post"
        android:name="com.example.hunterz.ui.send_post.SendPostFragment"
        android:label="@string/menu_send_post"
        tools:layout="@layout/fragment_send_post" />

    <fragment
        android:id="@+id/nav_send_notification"
        android:name="com.example.hunterz.ui.send_notification.SendNotificationFragment"
        android:label="@string/menu_send_notification"
        tools:layout="@layout/fragment_send_notification" />
</navigation>