<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/clubLogo"
        android:layout_width="185dp"
        android:layout_height="171dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/hunterz_logo"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/username_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clubLogo"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/username_title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userName_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_username_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:layout_below="@+id/username_title"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/password_title"
        android:layout_below="@+id/userName_txt"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/passWord_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_password_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:layout_below="@+id/password_title"
        android:inputType="textPassword"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/signIn_btn_title"
        android:textColor="#ffffff"
        android:layout_below="@+id/passWord_txt"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/or_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/or_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/sign_up_button"
        android:text="@string/signUp_btn_title"
        android:textColor="#4A84FF"
        android:layout_below="@+id/or_title"
        android:textSize="16sp"
        />


</RelativeLayout>